symposium/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: symposium
  namespace: default
spec:
  rules:
    - host: symposium.ch.tudelft.nl
      http:
        paths:
        - backend:
            serviceName: gcloud
            servicePort: 80
          path: /2017
        - backend:
            serviceName: gcloud
            servicePort: 80
          path: /2018/
        - backend:
            serviceName: gcloud
            servicePort: 80
          path: /2020/
        - backend:
            serviceName: symposium-2022
            servicePort: 80
          path: /2022/
  tls:
    - hosts:
        - symposium.ch.tudelft.nl
      secretName: ingress-ext-tls
